# treehouse

./: .gitignore  README.md  ferrers-relations.sh  max-ferrers-chain-cover.sh
codelite/psy-utils/: Makefile  psy-utils.workspace
codelite/psy-utils/termTrees/: Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  termTrees.project
codelite/psy-utils/termTrees/autom4te.cache/: requests  traces.0  traces.1  traces.2  traces.3
codelite/psy-utils/termTrees/src/: Makefile  Makefile.am  Makefile.in  termTrees.c
codelite/psy-utils/termtrees/src/: CMakeLists.txt  cli.c  main.c  op_signature.c  terms.c  termtrees.c  termtrees.h  test.c
codelite/psy-utils/termtrees/src/bstrlib/: CMakeLists.txt
codelite/psy-utils/termtrees/src/libhygra/: CMakeLists.txt  bundles.c  dihy.c  hygra.h  math.c  patf.c  test.c
conexp/: ConExp.prop
eclipse/cfca/: .cproject  .project  cfca.doxyfile
eclipse/fpchelpers/: makeJar.jardesc
eclipse/termTrees/: dev-requirements.sh
fpcjvm/: readme.txt
fpcjvm/etc/: fpc.cfg  fpc.cfg~
libs/libcprops-0.1.12/: Makefile  avl.lo  bstr.lo  client.lo  collection.lo  config.status  db.lo  hashlist.lo  hashtable.lo  heap.lo  http.lo  httpclient.lo  libcprops.la  libtool  linked_list.lo  mempool.lo  mtab.lo  multimap.lo  nary.lo  priority_list.lo  rb.lo  rtrie.lo  sorted_hash.lo  splay.lo  str.lo  thread.lo  trie.lo  vector.lo  wtab.lo  wtrie.lo
pas/: contexts.pas  ferrers-relations.sh  ferrers.pas  intentcover.pas  make.sh  makechain.pas  tricks.pas
py/: inject-GM-cxt
(+571 files in other folders)
